# hrc-arms

./: .gitignore  PLAN.md  README.md
src/hrc_description/: CMakeLists.txt  package.xml
src/hrc_description/launch/: view_workcell.launch.py
src/hrc_description/rviz/: view_workcell.rviz
src/hrc_description/urdf/: workcell.urdf.xacro
src/hrc_description/urdf/macros/: robotiq_2f85.xacro
src/hrc_description_v2/: CHECKPOINT.md  CMakeLists.txt  package.xml
src/hrc_description_v2/config/: initial_positions.yaml
src/hrc_description_v2/launch/: view_workcell.launch.py
src/hrc_description_v2/urdf/: workcell.urdf.xacro
src/hrc_description_v2/urdf/macros/: realsense_d435.xacro
src/hrc_handoff_demo/: package.xml  setup.cfg  setup.py
src/hrc_handoff_demo/hrc_handoff_demo/: handoff_demo.py
src/hrc_handoff_demo/launch/: handoff.launch.py
src/hrc_handoff_demo/rviz/: handoff.rviz
src/hrc_handoff_demo/scripts/: ik_helper.py
src/hrc_moveit_config/: CMakeLists.txt  package.xml
src/hrc_moveit_config/config/: hrc.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml
src/hrc_moveit_config/launch/: demo.launch.py
src/hrc_moveit_config/rviz/: moveit.rviz
src/hrc_physics/: package.xml  setup.cfg  setup.py
src/hrc_physics/config/: workpiece.xml
src/hrc_physics/hrc_physics/: mujoco_runner.py
src/hrc_physics/launch/: physics.launch.py
