<?xml version="1.0"?>
<package format="3">
  <name>hrc_description</name>
  <version>0.1.0</version>
  <description>
    HRC-ARMS workcell URDF: pedestal-mounted dual UR5e arms with
    Robotiq 2F-85 grippers, overhead RealSense D435, work table.
    Description-only — no controllers, no Gazebo plugins (added in
    later packages).
  </description>
  <maintainer email="klkhant707@gmail.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
