<?xml version="1.0"?>
<package format="3">
  <name>hrc_description_v2</name>
  <version>0.1.0</version>
  <description>
    HRC-ARMS workcell URDF v2: arms, pedestal, table identical to v1.
    Cabinet redesigned for four task sections (blue tubes, yellow W,
    pink pockets, purple pyramid). Front face pulled forward to Y=+1.00
    for reach. Asymmetric vertical divider at X=+0.20. Description-only.
  </description>
  <maintainer email="klkhant707@gmail.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
