<?xml version="1.0"?>
<package format="3">
  <name>hrc_handoff_demo</name>
  <version>0.1.0</version>
  <description>
    Plan-only scripted handoff demo for the HRC-ARMS workcell.
    A single Python node drives a state machine through ready → pick →
    handover → drop → reset, interpolating between joint poses and
    publishing /joint_states directly (no MoveIt / no controllers).
    Demonstrates the workcell motion envelope before the real task
    planner is built in Phase 5.
  </description>
  <maintainer email="klkhant707@gmail.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>hrc_description_v2</exec_depend>
  <exec_depend>hrc_moveit_config</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
