<?xml version="1.0"?>
<package format="3">
  <name>hrc_moveit_config</name>
  <version>0.1.0</version>
  <description>
    MoveIt2 config for the HRC-ARMS dual UR5e workcell. Defines five
    planning groups (left_arm, right_arm, both_arms, left_gripper,
    right_gripper), end-effectors, named poses, OMPL planners, and
    a plan-only controller stack (no actuated hardware in this phase).
  </description>
  <maintainer email="klkhant707@gmail.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hrc_description_v2</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
