<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hrc_physics</name>
  <version>0.1.0</version>
  <description>MuJoCo physics sidecar for the HRC-ARMS workpiece (cube). Plan-only motion + rigid-body twin pattern.</description>
  <maintainer email="hrc-arms@example.com">hrc-arms</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
